fixed gridding issues and overflow

--- a/styles/about.css
+++ b/styles/about.css
@@ -94,15 +94,16 @@ p {
   margin: 0.5% 0%;
 }
 
-.about-content-description-embedded-link {
+.about-content-description-embedded-link,
+.about-content-description-embedded-link:visited {
   font-family: "Poppins";
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
   margin: 0;
-  color: #424242;
-  text-decoration-color: #424242;
+  color: #57B8E8;
+  text-decoration-color: #57B8E8;
   text-decoration-line: underline;
 }
 
@@ -206,7 +207,7 @@ p {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 100%;
+  width: 90%;
   margin: 5%;
 }
 
@@ -215,7 +216,7 @@ p {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 90%;
+  width: 100%;
   margin: 2.5% 0%;
 }
 
@@ -245,21 +246,29 @@ p {
 }
 
 .about-section--fun-facts-section-grid-images {
-  /* display: grid;
-  grid-template-columns: repeat(3, 10em);
-  grid-gap: 5%;
-  width: 100%;
-  margin: 2.5% 0%; */
-  display: flex;
+  display: grid;
+  grid-template-columns: minmax(20%, 35%) 1fr minmax(20%, 35%);
+  grid-gap: 2.5%;
+  /* display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: flex-start; */
   width: 100%;
+  height: 30%;
   margin: 2.5% 0%;
 }
 
+.about-section--fun-facts-section-grid-image-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  height: 100%;
+}
+
 #fun-facts-image {
-  max-height: 29em;
+  height: 100%;
+  width: 100%;
+  /* max-height: 29em; */
   /* justify-self: center; */
 }
 
@@ -269,7 +278,7 @@ p {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 100%;
+  width: 90%;
   height: 30%;
   margin: 5%;
 }
